# NET

./: .gitignore  README.md
01/: client.c  cllient.cpp  server.c
03/: README.md
03/HTTP/: README.md  http_request.py
04/client/include/: client.hpp
04/client/src/: client.cpp
04/server/: CMakeLists.txt
04/server/src/: net_utilities.cpp
05/server/src/: server.cpp
CONTROL_LAB/: test.cpp
NCURSES/01.1/client/: CMakeLists.txt
NCURSES/01.1/client/include/: client.hxx  client_toolkit.hxx
NCURSES/01.1/client/src/: client.cxx  client_toolkit.cxx
NCURSES/01.1/server/: CMakeLists.txt
NCURSES/01/client/: main.cxx
NCURSES/01/server/: main.cxx
NCURSES/02/client/: CMakeLists.txt  main.cpp
NCURSES/02/server/: CMakeLists.txt  main.cpp
NCURSES/02/server/include/: server.hpp  server_interface.hpp  server_toolkit.hpp  typedef.hpp
NCURSES/02/server/src/: server.cpp  server_interface.cpp  server_toolkit.cpp
TCP/01/: README.md  server.c
TCP/02/: server.cpp
TCP/03/: README.md  client.cpp
TCP/03/HTTP/: http_response.txt  txt_script.py
TCP/04/client/: CMakeLists.txt
TCP/04/server/: main.cpp
TicTacToe/: .gitignore  DataStructures.txt
TicTacToe/client/: main.cpp
TicTacToe/client/include/: client.hpp  net_utilities.hpp
UDP/: README.md
UDP/01/: run_test.sh
UDP/01/client/: main.cxx  (+1 more)
UDP/UDP-client v01/: CMakeLists.txt
UDP/UDP-client v01.1/: CMakeLists.txt  README.md
UDP/UDP-client v01.1/include/: udp_client.hpp
client-server v01/: client.c  server.c
client-serverv2/: client.cpp  server.cpp
client-serverv3/: server.cpp
client-serverv4/: client.cpp  server.cpp
client-serverv6/: client-server.h  server.cpp
client-serverv6/client_2/: client.cpp
net_exam/: main.cpp
(+59 files in other folders)
